--- a/css/main.css
+++ b/css/main.css
@@ -2376,6 +2376,10 @@ video#bgvideo {
   }
 }
 
+.logo__img-primary, .logo__img-secondary {
+  height: 50px;
+}
+
 /* ======================================================================== */
 /* 26. footerLogo */
 /* ======================================================================== */
