--- a/css/main.css
+++ b/css/main.css
@@ -2380,6 +2380,10 @@ video#bgvideo {
   height: 50px;
 }
 
+.logo__small {
+  height: 30px !important;
+}
+
 /* ======================================================================== */
 /* 26. footerLogo */
 /* ======================================================================== */
